--- a/scripts/demos/demo-rgbled/package.json
+++ b/scripts/demos/demo-rgbled/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "demo-linkdevelop",
+  "name": "demo-rgbled",
   "version": "1.0.0",
   "description": "tinyengine app",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "deviceShadow": "0.0.2"
+    "rgbled": "0.0.1"
   }
 }
