add default route

--- a/scripts/drivers/ir/hs0038/package.json
+++ b/scripts/drivers/ir/hs0038/package.json
@@ -1,8 +1,8 @@
 {
   "name": "hs0038",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "this is hs0038 infrared sensor driver",
-  "main": " ",
+  "main": "src/index.js",
   "author": "jweih.hjw",
   "license": "ISC",
   "platform":"ESP32",
