--- a/scripts/drivers/display/st7735/package.json
+++ b/scripts/drivers/display/st7735/package.json
@@ -1,8 +1,8 @@
 {
   "name": "st7735",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "this is LCD st7735 driver for ESP32",
-  "main": " ",
+  "main": "src/index.js",
   "author": "jweih.hjw",
   "license": "ISC",
   "platform":"ESP32",
