--- a/scripts/drivers/display/tube595/package.json
+++ b/scripts/drivers/display/tube595/package.json
@@ -1,8 +1,8 @@
 {
   "name": "tube595",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "this is tube595 digitron driver",
-  "main": " ",
+  "main": "src/index.js",
   "author": "jweih.hjw",
   "license": "ISC",
   "platform":"ESP32",
