--- a/scripts/drivers/keypad/touch-key/package.json
+++ b/scripts/drivers/keypad/touch-key/package.json
@@ -1,8 +1,8 @@
 {
   "name": "touchkey",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "this is touch key driver",
-  "main": " ",
+  "main": "src/index.js",
   "author": "jweih.hjw",
   "license": "ISC",
   "platform":"ESP32",
