--- a/scripts/drivers/motor/tb6612fng/package.json
+++ b/scripts/drivers/motor/tb6612fng/package.json
@@ -1,8 +1,8 @@
 {
   "name": "codedmotor",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "this is coded motor driver",
-  "main": " ",
+  "main": "src/index.js",
   "author": "jweih.hjw",
   "license": "ISC",
   "platform":"ESP32",
