--- a/scripts/drivers/sensors/multi/mmc3680kj/package.json
+++ b/scripts/drivers/sensors/multi/mmc3680kj/package.json
@@ -1,8 +1,8 @@
 {
   "name": "mmc3680kj",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "this is mmc3680kj magnetic sensor driver",
-  "main": " ",
+  "main": "src/index.js",
   "author": "jweih.hjw",
   "license": "ISC",
   "platform":"ESP32",
