--- a/scripts/drivers/sensors/multi/qmc5883/package.json
+++ b/scripts/drivers/sensors/multi/qmc5883/package.json
@@ -1,8 +1,8 @@
 {
   "name": "qmc5883",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "this is qmc5883 Digital Compass driver",
-  "main": " ",
+  "main": "src/index.js",
   "author": "jweih.hjw",
   "license": "ISC",
   "platform":"ESP32",
