--- a/scripts/drivers/sensors/multi/shtc1/package.json
+++ b/scripts/drivers/sensors/multi/shtc1/package.json
@@ -1,8 +1,8 @@
 {
   "name": "shtc1",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "this is shtc1 temprature & humidity sensor driver",
-  "main": " ",
+  "main": "src/index.js",
   "author": "jweih.hjw",
   "license": "ISC",
   "platform":"ESP32",
