--- a/scripts/drivers/sensors/voltage/lm393/package.json
+++ b/scripts/drivers/sensors/voltage/lm393/package.json
@@ -1,8 +1,8 @@
 {
   "name": "lm393",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "this is angular sensor driver",
-  "main": " ",
+  "main": "src/index.js",
   "author": "jweih.hjw",
   "license": "ISC",
   "platform":"ESP32",
