--- a/scripts/drivers/switch/sw420/package.json
+++ b/scripts/drivers/switch/sw420/package.json
@@ -1,8 +1,8 @@
 {
   "name": "sw420",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "this is sw420 driver for Esp32",
-  "main": " ",
+  "main": "src/index.js",
   "author": "",
   "license": "ISC",
   "platform":"ESP32",
